--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,visualstudiocode,node,git
+
+# Exclude typescript build
+build/
+dist/
