--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
   "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
+    "google",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ]
