--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.3.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jest": "^25.3.0",
     "jest": "^27.4.2",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
