--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "rimrafe ./build && tsc",
+    "build": "rimraf ./build && tsc",
     "start": "npm run build && node build/index.js",
     "test": "jest",
     "test:watch": "jest --watch"
